[package]
name = "ufocus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full", "macros"] }
dotenv = "0.15.0"
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["cors"] }
tower = "0.4.13"
chatgpt_rs = { version = "1.2.3", features = ["json", "streams"] }
futures-util = "0.3.30"
